--- a/public/contact.html
+++ b/public/contact.html
@@ -1,6 +1,5 @@
 <h1>Contact Me</h1>
-<p>Tel: 123456789</p>
-<p>Email: xxxxxx@gmail.com</p>
+<p>Email: vaibhavzeno4@gmail.com</p>
 <p>Address:</p>
 <p>
   123 North Street<br />
